src/tests/let_statement/snapshots/monkey_interpreter__tests__let_statement__test_let_statement_case_7_environment.snap
---
source: src/tests/let_statement/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {
                "is_file": True,
            },
            enclosing: None,
        },
    },
}
