src/tests/let_statement/snapshots/monkey_interpreter__tests__let_statement__test_let_statement_case_7_lexical_analysis.snap
---
source: src/tests/let_statement/mod.rs
assertion_line: 39
expression: tokens
---
[
    PositionedToken {
        token: Let,
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "is_file",
        },
        position: Position {
            line: 1,
            column: 5,
        },
    },
    PositionedToken {
        token: Assign,
        position: Position {
            line: 1,
            column: 13,
        },
    },
    PositionedToken {
        token: True,
        position: Position {
            line: 1,
            column: 15,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 1,
            column: 19,
        },
    },
]
