src/tests/let_statement/snapshots/monkey_interpreter__tests__let_statement__test_let_statement_case_9_lexical_analysis.snap
---
source: src/tests/let_statement/mod.rs
assertion_line: 39
expression: tokens
---
[
    PositionedToken {
        token: Let,
        position: Position {
            line: 1,
            column: 2,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "file",
        },
        position: Position {
            line: 1,
            column: 6,
        },
    },
    PositionedToken {
        token: Assign,
        position: Position {
            line: 1,
            column: 11,
        },
    },
    PositionedToken {
        token: String {
            literal: "/tmp/temp.txt",
        },
        position: Position {
            line: 1,
            column: 13,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 1,
            column: 28,
        },
    },
]
